@@ -13,7 +13,7 @@ public class ComidaCarnivoraBuilder implements IComidaBuilder{
     @Override
     public boolean abrirbolsa(List<ComidaEntityDto> provisiones) {
         if (!provisiones.isEmpty()){
-            comida=provisiones.getFirst();
+            comida=provisiones.get(0);
             comida.setNombre(" ternera con pavo");
             comida.setEstadoComida(EstadoComida.CRUDA);
             comida.setTipoComida(TipoComida.CARNIVORA);
